# classicNotepad

./: .gitignore  CLASSIC_NOTEPAD_BUILD_PLAN.md  CMakeLists.txt  LICENSE  PERFORMANCE_SECURITY_REVIEW.md  README.md  WIN11_NOTEPAD_DARK_PARITY_PLAN.md
clasicNotepadCrossPlatform/: README.md
clasicNotepadCrossPlatform/docs/: 01_TECHNOLOGY_RESEARCH_AND_DECISION.md  02_CURRENT_CLASSIC_NOTEPAD_BEHAVIOR_SPEC.md  03_PLATFORM_API_MAPPING.md  04_IMPLEMENTATION_PLAN_MAC_FIRST.md  05_SPELLING_AND_DARK_MODE_PLAN.md  05_WINDOWS_FIRST_CROSS_PLATFORM_MIGRATION_PLAN.md  06_LINUX_FEATURE_PARITY_AND_AUTOMATION_PLAN.md
docs/: LINUX_BUILD_ENVIRONMENT.md  LINUX_SPELLING_FIX_PLAN.md  MACOS_BUILD_PLAN.md  README.md  SPELL_CHECK_RESEARCH.md  WIN11_NOTEPAD_DARK_PARITY_PLAN.md
scripts/: build-macos.sh  build-ubuntu.ps1  build.ps1  clean.ps1  generate-macos-icon.py  package-macos.sh  test-macos.sh  test.ps1
src/: ansi_encoding.h  app.cpp  app.h  app_version.h.in  appearance.cpp  appearance.h  document.cpp  document.h  encoding.cpp  encoding.h  file_io.h  line_endings.cpp  line_endings.h  main.cpp  resource.h  resources.rc  spell_check.cpp  spell_check.h  spell_text_utils.cpp  spell_text_utils.h  spelling.cpp  spelling.h  text_metadata.cpp  text_metadata.h
src/platform/linux/: gtk_actions.cpp  gtk_actions.h  gtk_app.cpp  gtk_app.h  gtk_automation.cpp  gtk_automation.h  gtk_dialogs.cpp  gtk_dialogs.h  gtk_main.cpp  gtk_spelling.cpp  gtk_spelling.h
src/platform/macos/: Info.plist.in  mac_app.h  mac_app.mm  mac_appearance.h  mac_appearance.mm  mac_automation.h  mac_automation.mm  mac_main.mm  mac_spelling.h  mac_spelling.mm
src/platform/portable/: ansi_encoding_portable.cpp  file_io_std.cpp
src/platform/windows/: ansi_encoding_win32.cpp  app.cpp  app.h  automation.cpp  automation.h  file_io_win32.cpp  main.cpp  resources.rc  spell_check.h  win32_platform.h
tests/: linux_spelling_probe.cpp  macos_spelling_compile.mm  text_conversion_tests.cpp
tests/automation/: automation_context.py  classic_notepad_driver.py  run_automation_tests.py  test_appearance_theme.py  test_edit_commands.py  test_encoding_line_endings.py  test_file_workflow.py  test_find_replace_go_to.py  test_format_view_status.py  test_printing.py  test_spell_capability.py  test_status_metadata.py
